log
Thu 24 Aug 2023 08:22:16 PM UTC: 
 tests:  0|6
total_score: 0/70
fd65fc8
Thu 24 Aug 2023 08:25:32 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:31:8: error: conflicting types for ‘createList’; have ‘List *(int)’ {aka ‘struct List *(int)’}
   31 | List * createList(int ) {
      |        ^~~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:6:8: note: previous declaration of ‘createList’ with type ‘List *(void)’ {aka ‘struct List *(void)’}
    6 | List * createList(void);
      |        ^~~~~~~~~~
test.c: In function ‘test_create’:
test.c:84:15: error: too few arguments to function ‘createList’
   84 |     List* L = createList();
      |               ^~~~~~~~~~
In file included from test.c:5:
list.c:31:8: note: declared here
   31 | List * createList(int ) {
      |        ^~~~~~~~~~
Compilation failed
162d317
Thu 24 Aug 2023 08:25:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
92454ab
Thu 24 Aug 2023 11:08:18 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|6
total_score: 0/70
94dcd26
Thu 24 Aug 2023 11:11:14 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
743c934
Thu 24 Aug 2023 11:16:58 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
a476c09
Thu 24 Aug 2023 11:17:46 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
22dc87b
Thu 24 Aug 2023 11:18:47 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
5010530
Fri 25 Aug 2023 01:01:36 AM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
6d7a169
Fri 25 Aug 2023 01:01:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cfbe5ab
Fri 25 Aug 2023 01:04:12 AM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|5
total_score: 10/70
edca3b3
Fri 25 Aug 2023 01:12:19 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e567e5b
Fri 25 Aug 2023 01:13:24 AM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:67:29: error: expected ‘;’ before ‘}’ token
   67 |   return list->current->data
      |                             ^
      |                             ;
   68 | }
      | ~                            
Compilation failed
6fd0e16
Fri 25 Aug 2023 01:13:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
f658051
Fri 25 Aug 2023 01:15:07 AM UTC: 
 list.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 20/70
7edc442
Fri 25 Aug 2023 01:17:20 AM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:70: error: expected identifier before ‘==’ token
   51 |   if (list->current == NULL || list->current->prev == NULL || list-> == NULL)
      |                                                                      ^~
Compilation failed
2db4874
Fri 25 Aug 2023 01:17:36 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/70
093a947
Fri 25 Aug 2023 01:24:31 AM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
3c814f5
Fri 25 Aug 2023 01:26:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ca2ed8e
